fixed skill tag wrapping

--- a/portfolio-website/src/app/components/about-me/about-me.component.scss
+++ b/portfolio-website/src/app/components/about-me/about-me.component.scss
@@ -62,6 +62,11 @@
 .skill-container-right{
   display: flex;
   flex-direction: column;
+  max-width: 400px;
+  min-width: 150px;
+}
+
+.skill-bar-container{
 }
 
 .other-container{
@@ -89,6 +94,7 @@
   border: 1px solid $off-white;
   padding: 5px 10px 5px 10px;
   margin: 10px 5px 10px 5px;
+  display: inline-block;
 }
 
 //Experience
